# mllm-verifiers-abias-sgv

./: .gitignore  README.md  pyproject.toml
agrb/: constants.py  download_data.py  render_trajectories.py
agrb/metadata/: agrb_to_vwa.csv  annotations.csv
agrb/utils_agrb/: agrb_utils.py  parse_ax_tree.py  vwa_trajectory.py
core_utils/: __init__.py  concurrency_utils.py  constants.py  data_recorder.py  eval_utils.py  file_utils.py  image_utils.py  logger_utils.py  network_utils.py  run_utils.py  signal_utils.py  string_utils.py  timing_utils.py  types.py
llms/: README.MD  api_keys_backup_template.json  generation_config.py  llm_utils.py  prompt_utils.py  retry_utils.py  setup_utils.py  tokenizer_utils.py  translate.py  types.py
llms/config/: model_repo.yaml
llms/constants/: __init__.py  constants.py
llms/examples/: example.py  examples.ipynb
llms/providers/: Notes.md  client_manager.py
offline_experiments/: README.MD  __init__.py  build_configs.py  config_run.py  first_pass.py  runners.py  verify.py
offline_experiments/analysis/: compute_eval_distributions.py  compute_stats.py  compute_stats_by_traj_len.py  eval_mapping.py
offline_experiments/calibration/: calibration.py  run_bootstrap.py  run_calibration.py
offline_experiments/config/: eval_configs.py  llm_configs.py
offline_experiments/prompts/: build_prompt.py  common_prompts.py  prompts_osw.py  prompts_vwa.py
offline_experiments/utils_offline/: agrb_specific.py  osworld_specific.py  utils_offline_exper.py  vwa_specific.py
osw/: README.md  host_vllm.py  lib_run_single.py  main.py  run_uitars.py  run_uitars_parallel.sh  summarize_results.py
osw/evaluation_examples/: infeasible_tasks.txt  test_1.json  test_2ndhalf.json  test_except_impress.json  test_infeasible.json  test_one.json
osw/mm_agents/: llm_gen_config.py  uitars_agent.py
osw/utils_osw/: consolidate_scores_osw.py  render_trajectories.py  utils_osw.py
osw/verifier/: first_pass.py  prompts.py  second_pass.py
robo/: README.md  run.py  run_vlm.py  talk_vlm.py
robo/instruction/: tool_hang.txt  tool_hang_1pass_prompt.txt  tool_hang_2pass_prompt_part1.txt  tool_hang_2pass_prompt_part2.txt
robo/tests/: __init__.py  test_robomimic.py  test_vlm.py
robomimic/: README.MD
vwa/: README.md  docs_env_updates.md  run.py
vwa/agent/: agent.py  agent_utils.py  constants.py  executor.py  k_extraction.py  modular_agent.py  prompt_constructor.py  reflexion.py  request_refiner.py  text_refiner.py  verifier.py
vwa/analysis/: compute_scores.py  compute_scores_verif_noverif.py  count_tokens.py  sample_tasks.ipynb
(+837 files in other folders)
